--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ codespan-reporting = { version = "0.11", optional = true }
 self-rust-tokenize = { version = "0.3", optional = true }
 
 [target.'cfg(target_family = "wasm")'.dependencies]
-wasm-bindgen = "=0.2.89"
+wasm-bindgen = "0.2"
 tsify = "0.4.5"
 
 [features]
