--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -48,6 +48,7 @@ jobs:
         run: cargo clippy
 
   publish-ability:
+    if: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
